# napovedna_storitev

./: Dockerfile  README.md  data.dvc  docker-compose.yml  pyproject.toml
.dvc/: config
.github/workflows/: client-ci-cd.yml  data-pipeline.yml  deploy-pipeline.yml  fetch.yml  main.yml  metrics.yml  service-ci-cd.yml  training-pipeline.yml
data/processed/: station_1.csv  station_10.csv  station_11.csv  station_12.csv  station_13.csv  station_14.csv  station_15.csv  station_16.csv  station_17.csv  station_18.csv  station_19.csv  station_2.csv  station_20.csv  station_21.csv  station_22.csv  station_23.csv  station_24.csv  station_25.csv  station_26.csv  station_27.csv  station_28.csv  station_29.csv  station_3.csv  station_4.csv  station_5.csv  station_6.csv  station_7.csv  station_8.csv  station_9.csv
gx/: great_expectations.yml
gx/expectations/: .ge_store_backend_id  my_suite.json
models/: mbajk_sequential_mse_10.56.keras
models/1/: model_latest.onnx  model_production.onnx
models/10/: model_latest.onnx  model_production.onnx
models/11/: model_latest.onnx  model_production.onnx
models/12/: model_latest.onnx  model_production.onnx
models/13/: model_latest.onnx  model_production.onnx
models/14/: model_latest.onnx  model_production.onnx
models/15/: model_latest.onnx  model_production.onnx
models/16/: model_latest.onnx  model_production.onnx
models/17/: model_latest.onnx  model_production.onnx
models/18/: model_latest.onnx  model_production.onnx
models/19/: model_latest.onnx  model_production.onnx
models/2/: model_latest.onnx  model_production.onnx
models/20/: model_latest.onnx  model_production.onnx
models/21/: model_latest.onnx  model_production.onnx
models/22/: model_latest.onnx  model_production.onnx
models/23/: model_latest.onnx  model_production.onnx
models/24/: model_latest.onnx  model_production.onnx
models/25/: model_latest.onnx  model_production.onnx
models/26/: model_latest.onnx  model_production.onnx
models/27/: model_latest.onnx  model_production.onnx
models/28/: model_latest.onnx  model_production.onnx
models/29/: model_latest.onnx  model_production.onnx
models/3/: model_latest.onnx  model_production.onnx
models/4/: model_latest.onnx  model_production.onnx
notebooks/: mbajk_dataset_processing.ipynb  mbajk_train.ipynb
src/: config.py
src/data/: ks.py  (+9 more)
(+240 files in other folders)
