[tool.poetry]
name = "napovedna-storitev"
version = "0.1.0"
description = ""
authors = ["jernej10 <jernej.ofic@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.4.1.post1"
pandas = "^2.2.1"
pytest = "^8.1.1"
requests = "^2.31.0"
pydantic = "^2.6.3"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
tensorflow = "^2.15.0.post1"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
fastapi = "^0.110.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
poethepoet = "^0.25.0"
pytest = "^8.1.1"
ruff = "^0.3.2"

[tool.poetry.group.win-dev.dependencies]
tensorflow-intel = "^2.16.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
fetch-bike-data = "python3 -m src.data.fetch-bike-data"
fetch-weather-data = "python3 -m src.data.fetch_weather_data"
process = "python3 -m src.data.process_data"
test = "pytest"

