[tool.poetry]
name = "napovedna-storitev"
version = "0.1.0"
description = ""
authors = ["jernej10 <jernej.ofic@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.4.1.post1"
pandas = "^2.2.1"
pytest = "^8.1.1"
requests = "^2.31.0"
pydantic = "^2.6.3"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
tensorflow = "^2.15.0.post1"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
fastapi = "^0.110.0"
great-expectations = "^0.18.12"
evidently = "^0.4.19"
mlflow = "^2.12.1"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
poethepoet = "^0.25.0"
pytest = "^8.1.1"
ruff = "^0.3.2"
black = "^24.4.0"

[tool.poetry.group.win-dev.dependencies]
tensorflow-intel = "^2.16.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
fetch-bike-data = "python3 -m src.data.fetch_bike_data"
fetch-weather-data = "python3 -m src.data.fetch_weather_data"
process = "python3 -m src.data.process_data"
test = "pytest"
test-remote-api = "pytest src/serve/tests/remote_api_test.py"
serve = "uvicorn src.serve.main:app --reload --port 8000"
validate = "python3 -m src.data.run_checkpoint"
data_drift = "python3 -m src.data.data_drift"
stability_tests = "python3 -m src.data.stability_tests"
ks_test = "python3 -m src.data.ks"

